--- a/Laser/Initialize/Initialize.vcproj/Initialize/Initialize/Initialize.vcxproj
+++ b/Laser/Initialize/Initialize.vcproj/Initialize/Initialize/Initialize.vcxproj
@@ -102,7 +102,9 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../../../../../Laser/Sources;C:\Program Files\boost\boost_1_53_0;../../../../../../TGUL/Sources;../../../../../../glfw-2.7.8.bin.WIN64/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../../../Laser/include;C:\Program Files\boost\boost_1_53_0;../../../../../../TGUL/Sources;../../../../../../glfw-2.7.8.bin.WIN64/include</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>Laser/Platform.h</ForcedIncludeFiles>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
